--- a/index.html
+++ b/index.html
@@ -215,7 +215,7 @@
                         <defs>
                           <style>
                             .cls-1 {
-                              font-size: 50px;
+                              font-size: 1em;
                               fill: #fff;
                               text-anchor: middle;
                               font-family: Galvji;
