--- a/aboutus.html
+++ b/aboutus.html
@@ -72,7 +72,7 @@
                     <br>
                     <h1 class="m-0 text-center text-black">Our History</h1><br>
                         <p class="text-center biggeraboutus">
-                            RB Games was started as 'Ryan Baptista Games' on November 26<sup>th</sup> 2009 in the Brisbane, Queensland. Our founder Ryan Baptista, started this company because he saw a gap in the market for a video game store that didn't rip you off when you traded in your old games. 
+                            RB Games was started as 'Ryan Baptista Games' on November 26<sup>th</sup> 2009 in the Brisbane, Queensland. Our founder Ryan Baptista, started this company because he saw a gap in the market for a video game store that didn't rip you off when you traded in your old games. Ever since then we have been serving gamers across Australia.
                         <br>
                         <br>
                         </p>
